--- a/gradle.properties
+++ b/gradle.properties
@@ -39,3 +39,12 @@ org.gradle.configureondemand=true
 android.useAndroidX=true
 
 org.gradle.configuration-cache=true
+
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=7890
+##systemProp.http.nonProxyHosts=localhost|127.0.0.1|10.*.*.*|192.168.*.*|*.local|172.16.*.*|172.17.*.*|172.18.*.*|172.19.*.*|172.20.*.*|172.21.*.*|172.22.*.*|172.23.*.*|172.24.*.*|172.25.*.*|172.26.*.*|172.27.*.*|172.28.*.*|172.29.*.*|172.30.*.*|172.31.*.*
+#
+## HTTPS ??
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=7890
+#systemProp.https.nonProxyHosts=localhost|127.0.0.1|10.*.*.*|192.168.*.*|*.local|172.16.*.*|172.17.*.*|172.18.*.*|172.19.*.*|172.20.*.*|172.21.*.*|172.22.*.*|172.23.*.*|172.24.*.*|172.25.*.*|172.26.*.*|172.27.*.*|172.28.*.*|172.29.*.*|172.30.*.*|172.31.*.*
