--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.7.3"
+fastjson = "1.2.76"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 kotlinxImmutable = "0.3.7"
@@ -16,8 +17,10 @@ androidxHiltNavigationCompose = "1.2.0"
 composeStableMarker = "1.0.5"
 kotlinxSerializationJson = "1.7.3"
 hilt = "2.54"
+okhttpVersion = "4.11.0"
 retrofit = "2.11.0"
 okHttp = "4.12.0"
+rtasrSdk = "3.0.0"
 sandwich = "2.0.10"
 landscapist = "2.4.6"
 coroutines = "1.9.0"
@@ -60,6 +63,7 @@ androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTes
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestJunit" }
 androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 compose-stable-marker = { group = "com.github.skydoves", name = "compose-stable-marker", version.ref = "composeStableMarker" }
+fastjson = { module = "com.alibaba:fastjson", version.ref = "fastjson" }
 landscapist-glide = { group = "com.github.skydoves", name = "landscapist-glide", version.ref = "landscapist" }
 landscapist-animation = { group = "com.github.skydoves", name = "landscapist-animation", version.ref = "landscapist" }
 landscapist-placeholder = { group = "com.github.skydoves", name = "landscapist-placeholder", version.ref = "landscapist" }
@@ -67,6 +71,8 @@ landscapist-palette = { group = "com.github.skydoves", name = "landscapist-palet
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttpVersion" }
+rtasr-sdk = { module = "cn.xfyun:rtasr-sdk", version.ref = "rtasrSdk" }
 sandwich = { module = "com.github.skydoves:sandwich-retrofit", version.ref = "sandwich" }
 retrofit-bom = { module = "com.squareup.retrofit2:retrofit-bom", version.ref = "retrofit" }
 retrofit = { module = "com.squareup.retrofit2:retrofit" }
@@ -96,6 +102,7 @@ compose-compiler-gradlePlugin = { group = "org.jetbrains.kotlin", name = "compos
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 spotless-gradlePlugin = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+websdk-java-speech = { module = "cn.xfyun:websdk-java-speech", version.ref = "rtasrSdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
